refactor: 添加NonNull、以及jdk21调整